Fix vertical alignment of toggle buttons

--- a/src/components/shared/Button/PaneToggle.css
+++ b/src/components/shared/Button/PaneToggle.css
@@ -3,6 +3,11 @@
   transform: translate(0, 2px);
   transition: transform 0.25s ease-in-out;
   cursor: pointer;
+  padding: 5px 2px;
+}
+
+.toggle-button-start.vertical,
+.toggle-button-end.vertical {
   padding: 4px 2px;
 }
 
